--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-        <td><img src="/picture/1669059849803.jpg" alt="error"></td>
+        <td><img src="picture/1669059849803.jpg" alt="error"></td>
         <td><h3>Abdullah Farooq</h3><p>I am a Network Engineer | System Administrator| IT Solution Architect | Google Cloud Architect Professional| AWS | Azure | GCP | DevOps at XSTAK</p></td>
         </tr>
 </table>
