--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </tr>
     </table>
     <hr size="3">
-   <a href="/about.html"><h3>My Hobbies</h3></a>
-   <a href="/details.html"><h3>Contact Me</h3></a>
+   <a href="about.html"><h3>My Hobbies</h3></a>
+   <a href="details.html"><h3>Contact Me</h3></a>
 </body>
 </html>
